never stop the <body> from overflowing...

--- a/css/partituretech.webflow.css
+++ b/css/partituretech.webflow.css
@@ -129,7 +129,7 @@ ul {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden;
+  overflow: visible;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
